--- a/boom.html
+++ b/boom.html
@@ -14,6 +14,7 @@
 
         .box{
             width:160px;
+            padding-top: 6em;
             margin: 50px auto;
             position: relative;
             animation:bom 1s alternate infinite ;
@@ -64,7 +65,7 @@
 
     <div class="left"></div>
     <div class="right"> </div>
-    <div class="botoom"> <span>bing bing bing  </span></div>
+    <div class="botoom"> <span>李子煜 </span></div>
 
 </div>
 </body>
