--- a/boom.html
+++ b/boom.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>boom</title>
+    <title>煜哥</title>
     <style>
         *{
             margin: 0px;
