--- a/css变幻.html
+++ b/css变幻.html
@@ -156,8 +156,8 @@
     <div class="inbox">
         <div class="top1"><img src="imgmmexport1553777806651.jpg" alt=""></div>
         <div class="bottom1"><img src="imgmmexport1553777806651.jpg" alt=""></div>
-        <div class="qian1"><img src="imgmmexport1553777806651.jpg" alt="">></div>
-        <div class="hou1">  <img src="imgmmexport1553777806651.jpg" alt=""></div>
+        <div class="qian1"><img src="imgmmexport1553777806651.jpg" alt=""></div>
+        <div class="hou1"><img src="imgmmexport1553777806651.jpg" alt=""></div>
         <div class="left1"><img src="imgmmexport1553777806651.jpg" alt=""></div>
         <div class="right1"><img src="imgmmexport1553777806651.jpg" alt=""> </div>
     </div>
