--- a/boom.html
+++ b/boom.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>煜哥</title>
+    <title>BOOM</title>
     <style>
         *{
             margin: 0px;
@@ -65,7 +65,7 @@
 
     <div class="left"></div>
     <div class="right"> </div>
-    <div class="botoom"> <span>李子煜 </span></div>
+    <div class="botoom"> <span>DRX </span></div>
 
 </div>
 </body>
