--- a/boom.html
+++ b/boom.html
@@ -9,7 +9,7 @@
             padding: 0px;
         }
         body{
-            background-color: black;
+            background-color: withe;
         }
 
         .box{
